--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -184,7 +184,7 @@
                                     </div>
                                 </div>
                                 <textarea id="about" rows="4" class="form-control form-control-sm" maxlength="50"
-                                          th:text="${loginUser.about} == null ? '아직 내용이 없습니다.' : ${loginUser.about}"></textarea>
+                                          th:placeholder="${loginUser.about} == null ? '아직 내용이 없습니다.' : ${loginUser.about}"></textarea>
                             </div>
                         </div>
 
