댓글 작성 구현

--- a/src/main/resources/static/assets/css/reviewviewer.css
+++ b/src/main/resources/static/assets/css/reviewviewer.css
@@ -72,7 +72,7 @@
     /* 댓글 리스트 */
 .comment-info {
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .comment-text {
